[tool.poetry]
name = "instometer"
version = "0.1.0"
description = ""
authors = ["Stepan Parunashvili <stepan.p@gmail.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.72.0"

[tool.poetry.group.dev.dependencies]
trio = "^0.26.0"
trio-websocket = "^0.11.1"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
